# api/swagger.yaml
@@ -269,6 +269,25 @@ paths:
           schema:
             $ref: '#/definitions/Event'
       x-swagger-router-controller: "Activity"
+  /activities/{id}/contact:
+    get:
+      tags:
+        - "activity"
+      summary: "Get the contact of an activity"
+      operationId: "activitiesIdPersonGET"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "id of the activity you want the contact of"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        '200':
+          description: "successful operation"
+          schema:
+            $ref: '#/definitions/Contact'
+      x-swagger-router-controller: "Activity"
 
   /contacts:
     get:
